# trading-settings-integration

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
proto/: trading_settings_integration_grpc_service.proto
src/: lib.rs  main.rs
src/app/: app_ctx.rs  mod.rs  settings.rs
src/grpc_server/: grpc_service.rs  mappers.rs  mod.rs  server.rs
