[package]
name = "trading-settings-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
my-grpc-extensions = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-nosql-contracts = { tag = "0.1.10", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git" }
my-no-sql-tcp-reader = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-no-sql-tcp-reader.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }
async-trait = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
prost = "*"
prost-types = "*"
serde = "*"
serde_yaml = "*"
serde_derive = "*"

[build-dependencies]
tonic-build = "*"
